--- a/app/src/main/res/layout-large/activity_login.xml
+++ b/app/src/main/res/layout-large/activity_login.xml
@@ -26,11 +26,12 @@
         android:layout_width="203dp"
         android:layout_height="63dp"
         android:layout_marginTop="252dp"
-        android:layout_marginBottom="672dp"
+        android:layout_marginBottom="276dp"
+        android:scrollbarSize="30dp"
         android:spinnerMode="dropdown"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.153"
+        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
+        app:layout_constraintEnd_toStartOf="@+id/imageViewLogo"
+        app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textViewUserName"
         tools:ignore="NotSibling" />
