--- a/app/src/main/res/layout-large/activity_mood_analysis.xml
+++ b/app/src/main/res/layout-large/activity_mood_analysis.xml
@@ -7,6 +7,34 @@
     android:background="#ECEBDE"
     android:padding="32dp">
 
+    <TextView
+        android:id="@+id/reportTextView"
+        android:layout_width="900dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="284dp"
+        android:padding="16dp"
+        android:textColor="#000"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.531"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="Mood analysis report will appear here..." />
+
+    <Spinner
+        android:id="@+id/periodSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:entries="@array/period_array"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.153"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.38"
+        tools:ignore="DuplicateIds" />
+
+
     <ImageView
         android:id="@+id/imageView9"
         android:layout_width="190dp"
@@ -18,6 +46,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.032"
         app:srcCompat="@drawable/image_2024_09_21_13_00_45" />
+
+    <Spinner
+        android:id="@+id/dataTypeSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:entries="@array/data_type_array"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.153"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.473" />
 
     <TextView
         android:id="@+id/textViewMoodAnalysis"
@@ -32,44 +72,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.028" />
-
-    <Spinner
-        android:id="@+id/spinnerTimeFilter"
-        android:layout_width="900sp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/custom_spinner_shape"
-        android:scrollbarSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonAnalyze"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.1"
-        app:layout_constraintStart_toEndOf="@+id/imageView9"
-        app:layout_constraintTop_toBottomOf="@+id/textViewMoodAnalysis"
-        app:layout_constraintVertical_bias="0.649" />
-
-    <Button
-        android:id="@+id/buttonAnalyze"
-        android:layout_width="800dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/custom_button_shape"
-        android:padding="14dp"
-        android:text="@string/analyze"
-        android:textColor="#EBEADB"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/frameLayoutChart"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.728"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.872" />
-
-    <FrameLayout
-        android:id="@+id/frameLayoutChart"
-        android:layout_width="500dp"
-        android:layout_height="500dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
