--- a/app/src/main/res/layout-large/activity_setting_goals.xml
+++ b/app/src/main/res/layout-large/activity_setting_goals.xml
@@ -48,20 +48,6 @@
         app:layout_constraintVertical_bias="0.323" />
 
     <EditText
-        android:id="@+id/editTextSleepReminder"
-        android:layout_width="900dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/custom_edittext_shape"
-        android:hint="@string/reminder"
-        android:padding="12dp"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.716" />
-
-    <EditText
         android:id="@+id/editTextSleepNotes"
         android:layout_width="900dp"
         android:layout_height="wrap_content"
@@ -82,6 +68,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/custom_edittext_shape"
         android:hint="@string/deadlines"
+        android:inputType="phone"
         android:padding="12dp"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
