--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/custom_button_shape"
         android:padding="12dp"
-        android:text="@string/mood_statistics"
+        android:text="@string/mood_analysis"
         android:textColor="#EBEADB"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
