--- a/app/src/main/res/layout/activity_redactor_profile.xml
+++ b/app/src/main/res/layout/activity_redactor_profile.xml
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/custom_edittext_shape"
         android:hint="@string/password_hint"
-        android:inputType="textPassword"
+        android:inputType="numberPassword"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,7 +89,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/custom_edittext_shape"
         android:hint="@string/confirm_password_hint"
-        android:inputType="textPassword"
+        android:inputType="numberPassword"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
